<resources>
    <string name="app_name">captureapp2-0</string>
    <string name="title_activity_menu_princi">menu_princi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Captación de señales</string>
    <string name="menu_slideshow">Servidores</string>
    <string name="menu_tools">Graficas</string>
    <string name="menu_share">Usuario</string>
    <string name="menu_send">Información</string>
    <string name="salirmenu">Cerrar sesión</string>
    <string name="title_activity_menu_principal">menu_principal</string>
</resources>
