<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.captureapp2_0.Vistas.Menu_princi.inicioFragment_view"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_inicio_menu" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.captureapp2_0.Vistas.cap_segnals.captacion_Fragment_view"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_captacion_segnl" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.captureapp2_0.Vistas.ui_vistas.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.captureapp2_0.Vistas.ui_vistas.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.captureapp2_0.Vistas.ui_vistas.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.captureapp2_0.Vistas.ui_vistas.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>